src/objects/TicketScale__c.object
<CustomObject>
    <description>Pricing levels for venue tickets established per event</description>
    <fields>
        <fullName>ActualGrossToDate__c</fullName>
        <label>Actual Gross To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualSalesToDate__c</fullName>
        <label>Actual Sales To Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ActualSalestoDateFormula__c</fullName>
        <formula>ProjectedPaidTickets__c -  ActualSalesToDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Sales to Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AfterAdjustedDeductions__c</fullName>
        <label>After Adjusted Deductions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AverageLiftPerTicket__c</fullName>
        <label>Average Lift Per Ticket</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BeforeAdjustedDeductions__c</fullName>
        <label>Before Adjusted Deductions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capacity__c</fullName>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comps__c</fullName>
        <label>Comps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Drives sharing rules to provide read-only access to other division members</description>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventDateTime__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Date Time</label>
        <referenceTo>EventDateTime__c</referenceTo>
        <relationshipLabel>Ticket Scales</relationshipLabel>
        <relationshipName>TicketScales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EventIDStageTypeDateTime__c</fullName>
        <description>This field is being used in GridBuddy filters. Should not be on any page layouts.</description>
        <label>Event ID Stage Type Date Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventIDStageType__c</fullName>
        <description>This field is being used in GridBuddy filters. Should not be on any page layouts.</description>
        <label>Event ID Stage Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Ticket Scales</relationshipLabel>
        <relationshipName>TicketScales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FaceValue__c</fullName>
        <label>Face Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FirstDayCount__c</fullName>
        <formula>TicketCountDay1__c -  TicketCountDay2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1st Day Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FirstDayGross__c</fullName>
        <formula>TicketGrossDay1__c -  TicketGrossDay2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>1st Day Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastGrossToGo__c</fullName>
        <formula>ProjectedGrossSales__c  -  ActualGrossToDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Gross To Go</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastSalesToGo__c</fullName>
        <formula>ProjectedPaidTickets__c -  ActualSalesToDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Sales To Go</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrossSales__c</fullName>
        <formula>SellableCapacity__c *  Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Holds__c</fullName>
        <label>Holds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kills__c</fullName>
        <label>Kills</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LiftAfterTaxes__c</fullName>
        <formula>LiftBeforeTaxes__c -  PlatinumBeforeAdjustedDeductions__c -  PlatinumAfterAdjusted_Deductions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lift After Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LiftBeforeFee__c</fullName>
        <label>Lift Before Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LiftBeforeTaxes__c</fullName>
        <formula>IF(BEGINS(TEXT(Type__c), &quot;Platinum&quot;),
LiftBeforeFee__c - TMFee__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lift Before Taxes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MatchesEventStage__c</fullName>
        <description>Whether the ticket scale currently matches the state of the event.</description>
        <formula>OR(
  /* stage type matches **/
  (  Text( StageType__c ) == Event__r.StatusStage__c ),
  /* or in settlement */
  AND(  isPickVal(StageType__c,&apos;Settlement&apos;),  Event__r.SettlementStarted__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matches Event Stage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetCapacity__c</fullName>
        <formula>Capacity__c - Kills__c - Holds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OfficeName__c</fullName>
        <description>Drives sharing rules to provide edit access to other office members</description>
        <label>Office Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opens__c</fullName>
        <label>Opens</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlatinumAfterAdjusted_Deductions__c</fullName>
        <label>Platinum After Adjusted Deductions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PlatinumBeforeAdjustedDeductions__c</fullName>
        <label>Platinum Before Adjusted Deductions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PriceLevel__c</fullName>
        <label>Price Level</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrimaryVenueOffice__c</fullName>
        <description>Drives sharing rules to provide edit access to booking members of the venue&apos;s primary office</description>
        <label>Primary Venue Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectedGrossSales__c</fullName>
        <formula>ProjectedPaidTickets__c *  Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Gross Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedPaidTicketsAdjustedForZeroPrice__c</fullName>
        <formula>IF(Price__c = 0, 0, ProjectedPaidTickets__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Projected Paid Tickets Adj for $0 Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProjectedPaidTickets__c</fullName>
        <label>Projected Paid Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SecondDayCount__c</fullName>
        <formula>TicketCountDay2__c -  TicketCountDay3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2nd Day Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SecondDayGross__c</fullName>
        <formula>TicketGrossDay2__c -  TicketGrossDay3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2nd Day Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SellableCapacity__c</fullName>
        <formula>IF(Price__c &lt;= 0 || ISBLANK(Price__c), 0, Capacity__c - Kills__c - Comps__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sellable Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShiftDate__c</fullName>
        <label>Shift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShowOnOffer__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show On Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowPlatinumOnOffer__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show Platinum On Offer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SoldValidation__c</fullName>
        <formula>IF(ActualSalesToDate__c!= (Capacity__c -  Kills__c -  Holds__c -  Comps__c -  Unsold__c), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SourceSystemId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SourceSystemId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>StageType__c</fullName>
        <label>Stage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Plan</fullName>
                    <default>true</default>
                    <label>Plan</label>
                </value>
                <value>
                    <fullName>Projection</fullName>
                </value>
                <value>
                    <fullName>Settlement</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TMFeePercent__c</fullName>
        <defaultValue>0.129</defaultValue>
        <label>TM Fee %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TMFee__c</fullName>
        <formula>IF(LiftBeforeFee__c &gt; 0, TotalPlatinumSeatProceeds__c *  TMFeePercent__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TM Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ThirdDayCount__c</fullName>
        <formula>TicketCountDay3__c -  TicketCountDay4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3rd Day Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ThirdDayGross__c</fullName>
        <formula>TicketGrossDay3__c -  TicketGrossDay4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>3rd Day Gross</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TicketCountDate1__c</fullName>
        <label>Ticket Count Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TicketCountDate2__c</fullName>
        <label>Ticket Count Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TicketCountDate3__c</fullName>
        <label>Ticket Count Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TicketCountDay1__c</fullName>
        <label>Ticket Count Day 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TicketCountDay2__c</fullName>
        <label>Ticket Count Day 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TicketCountDay3__c</fullName>
        <label>Ticket Count Day 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TicketGrossDay1__c</fullName>
        <label>Ticket Gross Day 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TicketGrossDay2__c</fullName>
        <label>Ticket Gross Day 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TicketGrossDay3__c</fullName>
        <label>Ticket Gross Day 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TicketScaleType__c</fullName>
        <formula>IF(BEGINS(TEXT(Type__c), &apos;Lawn&apos;), &apos;Lawn&apos;, &apos;Reserved&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ticket Scale Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalPlatinumSeatProceeds__c</fullName>
        <formula>IF(BEGINS(TEXT(Type__c), &quot;Platinum&quot;),
   IF(ISPICKVAL(StageType__c, &quot;Settlement&quot;),
      /* Use ActualGrossToDate__c if it&apos;s Settlement */
      ActualGrossToDate__c  +  LiftBeforeFee__c,
      /* Otherwise use ProjectedGrossSales__c if it&apos;s NOT Settlement */
      ProjectedGrossSales__c + LiftBeforeFee__c),
/* If it&apos;s not Platinum, return 0 */
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Platinum Seat Proceeds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Lawn</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>Rsvd - Value Channel</fullName>
                </value>
                <value>
                    <fullName>Rsvd - 4 Pack</fullName>
                </value>
                <value>
                    <fullName>Lawn - Value Channel</fullName>
                </value>
                <value>
                    <fullName>Lawn - 4 Pack</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unsold__c</fullName>
        <label>Unsold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VenueOwnership__c</fullName>
        <description>Drives sharing rules to provide edit access to booking members of the venue&apos;s primary office when Owned/Operated</description>
        <label>Venue Ownership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fxActualGrossToDate__c</fullName>
        <formula>(ActualGrossToDate__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Actual Gross To Date (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxAfterAdjustedDeductions__c</fullName>
        <formula>(AfterAdjustedDeductions__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>After Adjusted Deductions (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxAverageLiftPerTicket__c</fullName>
        <formula>(AverageLiftPerTicket__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Average Lift Per Ticket (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxBeforeAdjustedDeductions__c</fullName>
        <formula>(BeforeAdjustedDeductions__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Before Adjusted Deductions (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxFaceValue__c</fullName>
        <formula>(FaceValue__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Face Value (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxFirstDayGross__c</fullName>
        <formula>(FirstDayGross__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>1st Day Gross (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxForecastGrossToGo__c</fullName>
        <formula>(ForecastGrossToGo__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Forecast Gross To Go (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxGrossSales__c</fullName>
        <formula>(GrossSales__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Gross Sales (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxLiftAfterTaxes__c</fullName>
        <formula>(LiftAfterTaxes__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Lift After Taxes (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxLiftBeforeFee__c</fullName>
        <formula>(LiftBeforeFee__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Lift Before Fee (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxLiftBeforeTaxes__c</fullName>
        <formula>(LiftBeforeTaxes__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Lift Before Taxes (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPlatinumAfterAdjusted_Deductions__c</fullName>
        <formula>(PlatinumAfterAdjusted_Deductions__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Platinum After Adjusted Deductions (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPlatinumBeforeAdjustedDeductions__c</fullName>
        <formula>(PlatinumBeforeAdjustedDeductions__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Platinum Before Adj Deductions (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxPrice__c</fullName>
        <formula>(Price__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Price (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProjPaidTicketsAdjForZeroPrice__c</fullName>
        <formula>(ProjectedPaidTicketsAdjustedForZeroPrice__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Proj Paid Tickets Adj for $0 (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxProjectedGrossSales__c</fullName>
        <formula>(ProjectedGrossSales__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Projected Gross Sales (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxSecondDayGross__c</fullName>
        <formula>(SecondDayGross__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>2nd Day Gross (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTMFee__c</fullName>
        <formula>(TMFee__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>TM Fee (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxThirdDayGross__c</fullName>
        <formula>(ThirdDayGross__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>3rd Day Gross (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTicketGrossDay1__c</fullName>
        <formula>(TicketGrossDay1__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Ticket Gross Day 1 (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTicketGrossDay2__c</fullName>
        <formula>(TicketGrossDay2__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Ticket Gross Day 2 (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTicketGrossDay3__c</fullName>
        <formula>(TicketGrossDay3__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Ticket Gross Day 3 (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fxTotalPlatinumSeatProceeds__c</fullName>
        <formula>(TotalPlatinumSeatProceeds__c / (Event__r.CurrencyExchange__r.ExchangeRate__c))</formula>
        <label>Total Platinum Seat Proceeds (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Ticket Scale</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TS-{000000}</displayFormat>
        <label>Ticket Scale ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket Scales</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>LNE_EventChildOffice</fullName>
        <active>true</active>
        <description>Checks to see if the user has access to the events office/division. If not, user can not create child records related to the event.</description>
        <errorConditionFormula>!$Setup.GeneralSettings__c.GlobalDataAdministrator__c &amp;&amp;
!$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp;
!CONTAINS( &apos;,&apos; + $User.OfficeAccess__c + &apos;,&apos;,
&apos;,&apos; + Event__r.Office__r.OfficeID__c + &apos;,&apos;) &amp;&amp;

/* Financial Calculator is running and making updates */
!$Setup.GeneralSettings__c.BypassPBFlow__c</errorConditionFormula>
        <errorMessage>You cannot create child records of the event because you do not have authorized access to the events office/division</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_PriceRequired</fullName>
        <active>true</active>
        <description>Price required if event record type is not rental, buy sell, or hold, stage type is not settlement and is not blank.</description>
        <errorConditionFormula>!$Setup.GeneralSettings__c.GlobalDataAdministrator__c &amp;&amp;
$Profile.Name != &quot;LNE Integration&quot; &amp;&amp;
ISBLANK(Price__c) &amp;&amp;
NOT(OR(
  Event__r.RecordType.DeveloperName = &quot;Rental&quot;,
  Event__r.RecordType.DeveloperName = &quot;BuySell&quot;,
  Event__r.RecordType.DeveloperName = &quot;Hold&quot;,
  ISPICKVAL(StageType__c, &quot;Settlement&quot;),
  ISPICKVAL(StageType__c, &quot;Audit&quot;),
  Event__r.UsingTicketFeed__c
))</errorConditionFormula>
        <errorDisplayField>Price__c</errorDisplayField>
        <errorMessage>Price required if event record type is not rental, buy sell, or hold and stage type is not settlement.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LNE_ProjectedPaidTicketsRequired</fullName>
        <active>true</active>
        <description>Projected Paid Tickets is required if event record type is not rental, buy sell, or hold and stage type is not settlement.</description>
        <errorConditionFormula>!$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp;
$Profile.Name != &quot;LNE Integration&quot; &amp;&amp;
!Event__r.CloningInProcess__c &amp;&amp;
ISBLANK(ProjectedPaidTickets__c) &amp;&amp;
NOT(OR(
  Event__r.RecordType.DeveloperName = &quot;Rental&quot;,
  Event__r.RecordType.DeveloperName = &quot;BuySell&quot;,
  Event__r.RecordType.DeveloperName = &quot;Hold&quot;,
  ISPICKVAL(StageType__c, &quot;Settlement&quot;),
  ISPICKVAL(StageType__c, &quot;Audit&quot;)
))</errorConditionFormula>
        <errorDisplayField>ProjectedPaidTickets__c</errorDisplayField>
        <errorMessage>Projected Paid Tickets is required if event record type is not rental, buy sell, or hold and stage type is not settlement.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Projected_Paid_Greater_Than_Capacity</fullName>
        <active>true</active>
        <description>Projected Paid Tickets is entered as greater than Sellable Capacity</description>
        <errorConditionFormula>!$Setup.GeneralSettings__c.BypassAutomation__c &amp;&amp;
$Profile.Name != &quot;LNE Integration&quot; &amp;&amp;
SellableCapacity__c &gt; 0 &amp;&amp;
ProjectedPaidTickets__c &gt; SellableCapacity__c</errorConditionFormula>
        <errorMessage>Projected Paid Tickets may not be greater than Sellable Capacity. Reduce the Projected Paid Tickets entered.</errorMessage>
    </validationRules>
</CustomObject>